Fix footer alignment and connect all landing page buttons

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -1,14 +1,13 @@
 .footer-section {
   background-color: var(--dark-green);
   color: white;
-  position: relative;
   margin-top: 100px;
 }
 
 .visit-cta-container {
-  position: absolute;
-  top: -100px;
-  left: 0;
+  position: relative;
+  margin-top: -100px;
+  margin-bottom: 50px;
   width: 100%;
 }
 
@@ -106,7 +105,7 @@
 }
 
 .footer-bottom {
-  padding-top: 250px;
+  padding-top: 40px;
   padding-bottom: 30px;
 }
 
@@ -168,9 +167,6 @@
 @media (max-width: 992px) {
   .visit-card {
     flex-direction: column;
-  }
-  .footer-bottom {
-    padding-top: 550px;
   }
   .visit-benefits {
     grid-template-columns: 1fr;
